Fix horizontal scrollbar on role selector

--- a/modules/onboarding-wizard/assets/css/onboarding-wizard.css
+++ b/modules/onboarding-wizard/assets/css/onboarding-wizard.css
@@ -411,5 +411,6 @@
 .udb-onboarding-wizard-page .select2-selection {
 	height: 60px;
 	overflow-y: auto;
+	overflow-x: hidden;
 	border: 1px solid #ddd !important;
 }
